--- a/org.camunda.bpm.modeler/pom.xml
+++ b/org.camunda.bpm.modeler/pom.xml
@@ -3,7 +3,7 @@
 
   <parent>
     <artifactId>org.camunda.bpm.modeler.parent</artifactId>
-    <groupId>org.camunda.bpm.modeler</groupId>
+    <groupId>de.unipotsdam.hpi.bpmndata.modeler</groupId>
     <version>2.1.0-SNAPSHOT</version>
   </parent>
 
