--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,8 @@
 		<repository>
 			<id>eclipse-bpmn2</id>
 			<!--  TODO: change this when BPMN2 metamodel finds a premanent home -->
-			<url>http://download.eclipse.org/bpmn2-modeler/bpmn2/site</url>
+			<!--  url>http://download.eclipse.org/bpmn2-modeler/bpmn2/site</url -->
+			<url>http://download.eclipse.org/modeling/mdt/bpmn2/updates/milestones/S20130423/</url>
 			<layout>p2</layout>
 			<snapshots>
 				<enabled>true</enabled>
@@ -95,7 +96,7 @@
 
 		<repository>
 			<id>eclipse-graphiti</id>
-			<url>http://download.eclipse.org/graphiti/updates/0.9.0</url>
+			<url>http://archive.eclipse.org/graphiti/updates/0.9.0</url>
 			<layout>p2</layout>
 			<snapshots>
 				<enabled>true</enabled>
